--- a/package.json
+++ b/package.json
@@ -34,5 +34,11 @@
     "eslint-config-next": "15.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "prisma": {
+    "binaryTargets": [
+      "native",
+      "debian-openssl-1.1.x"
+    ]
   }
 }
