--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-auth": "^4.24.11",
+    "ogl": "^1.0.11",
     "openssl": "^2.0.0",
     "prisma": "^6.15.0",
     "react": "19.1.0",
