--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
+    "clickfusion": "^0.1.9",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
