--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
             "src": "package.json",
             "use": "@vercel/static-build",
             "config": {
-                "installCommand": "apt-get update && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev && npm install"
+                "installCommand": "apt-get update && apt-get install -y build-essential libcairo2-dev libpango1.0-dev libjpeg-dev libgif-dev librsvg2-dev libpixman-1-dev && npm install"
             }
         }
     ]
