--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
@@ -17,33 +16,26 @@
     "bcrypt": "^6.0.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
-    "clickfusion": "^0.1.9",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
-    "next": "15.5.0",
+    "next": "^15.5.3",
     "next-auth": "^4.24.11",
     "ogl": "^1.0.11",
-    "openssl": "^2.0.0",
     "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "tailwindcss": "^4",
+    "eslint-config-next": "^15.5.3",
     "typescript": "^5"
   },
   "prisma": {
